[package]
name = "matx"
version = "0.0.0-git"
edition = "2021"
description = "A lightweight, rusty matrix library that allows for simple and fast matrix operations."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "matx"
path = "src/lib.rs"


[dependencies]
rand = "0.8.5"
