[package]
name = "matx"
version = "0.2.0"
edition = "2021"
description = "A lightweight, rusty matrix library that allows for simple and fast matrix operations."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "matx"
path = "src/lib.rs"


[dependencies]
num = "0.4.0"
rand = "0.8.5"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0"
